--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           </div>
           <div class="flex-item">
             <h1 class="heading-primary color-black">
-              Their lives depend on your donation
+              Their lives depend
+              <onspan class="line-break"> your donation</onspan>
             </h1>
             <p class="paragraph color-grey">
               Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
@@ -78,7 +79,7 @@
       <section class="sec-help">
         <div class="sec-help-header">
           <h1 class="heading-primary color-black">
-            Their lives depend on your donation
+            They need us <span class="line-break">to suvive</span>
           </h1>
           <p class="paragraph color-grey">
             Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
