--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="flex-box">
           <div class="flex-item">
             <h1 class="heading-primary color-black">
-              Their lives depend on your donation
+               Their lives depend on <span class="line-break">your donation</span> 
             </h1>
             <p class="paragraph color-grey">
               Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
@@ -61,8 +61,8 @@
           </div>
           <div class="flex-item">
             <h1 class="heading-primary color-black">
-              Their lives depend
-              <onspan class="line-break"> your donation</onspan>
+             They Need Us
+              <span class="line-break"> To Survive</onspan>
             </h1>
             <p class="paragraph color-grey">
               Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
@@ -79,7 +79,7 @@
       <section class="sec-help">
         <div class="sec-help-header">
           <h1 class="heading-primary color-black">
-            They need us <span class="line-break">to suvive</span>
+            Their lives depend on  your donation
           </h1>
           <p class="paragraph color-grey">
             Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam
